k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maxweather
  labels:
    app: maxweather
spec:
  type: ClusterIP
  selector:
    app: maxweather
  ports:
    - name: http
      port: 80
      targetPort: 8080
